# schnorr

./: CMakeLists.txt  README.md
include/: main.h
libsh/: big_B448_58.h  big_B480_56.h  big_B512_60.h  big_B560_58.h  config_curve_Ed448.h  config_field_F448.h  ecdh_Ed448.h  ecdh_NIST256.h  ecp2_BLS12383.h  ecp_Ed448.h  eddsa_Ed448.h  eddsa_NIST256.h  fp_F448.h
src/: main.cpp
test/: CMakeCache.txt  Makefile  cmake_install.cmake  schnorr
